# Newton-Polygonizer

./: CMakeLists.txt  README.md  download.html  newton_polygonizer.cpp  newton_polygonizer_nowindow.cpp  polynomial_long_division.cpp
.github/workflows/: build.yml  build_div.yml
include/: config.h  geometry.h  graphics.h  polynomial.h  utility.h
src/: config.cpp  geometry.cpp  graphics.cpp  main.cpp  polynomial.cpp  utility.cpp
